Add PnL time filters and rename to Ash's Prediction Wallets
- Add 1H, 24H, 1W, 1M, 3M, ALL period filters to PnL chart
- Rename app title from PolyTracker to Ash's Prediction Wallets
- Update page metadata

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PolyTracker - Polymarket Wallet Tracker</title>
-    <meta name="description" content="Track your Polymarket wallet positions, PnL, and performance" />
-    <meta property="og:title" content="PolyTracker" />
-    <meta property="og:description" content="Track your Polymarket wallet positions, PnL, and performance" />
+    <title>Ash's Prediction Wallets</title>
+    <meta name="description" content="Track Polymarket wallet positions, PnL, and performance" />
+    <meta property="og:title" content="Ash's Prediction Wallets" />
+    <meta property="og:description" content="Track Polymarket wallet positions, PnL, and performance" />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
   </head>
