Add PWA support with vite-plugin-pwa

--- a/index.html
+++ b/index.html
@@ -29,8 +29,12 @@
     <meta name="twitter:title" content="Prediction Wallets - Track Polymarket Performance" />
     <meta name="twitter:description" content="Track and compare Polymarket wallet performance. Monitor PnL, win rate, portfolio value, and trading volume." />
     
-    <!-- Favicon -->
+    <!-- Favicon & PWA -->
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="apple-touch-icon" href="/favicon.svg" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-title" content="PredictWallets" />
   </head>
 
   <body>
