--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <link rel="apple-touch-icon" href="/favicon.svg" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <meta name="apple-mobile-web-app-title" content="PredictWallets" />
+    <meta name="apple-mobile-web-app-title" content="Prediction Wallets" />
   </head>
 
   <body>
